@@ -18,3 +18,5 @@ Andy Newman <atrn> - FreeBSD support patch
 Sascha Blank - FreeBSD support
 Bruce Frost - Stability
 Chuck Marco and Wilfredo Sanchez - Darwin support
+Jason Duell - CSCOPE_EDITOR and CSCOPE_LINEFLAG*
+Tom Hull - Similar work to CSCOPE_EDITOR and friends
