@@ -101,20 +101,22 @@ void
 edit(char *file, char *linenum)
 {
 	char	msg[MSGLEN + 1];	/* message */
-	char	plusnum[NUMLEN + 2];	/* line number option */
+	char	plusnum[NUMLEN + 20];	/* line number option: allow space for wordy line# flag */
 	char	*s;
 
 	file = filepath(file);
 	(void) sprintf(msg, "%s +%s %s", basename(editor), linenum, file);
 	postmsg(msg);
-	(void) sprintf(plusnum, "+%s", linenum);
-	
+	(void) sprintf(plusnum, lineflag, linenum);
 	/* if this is the more or page commands */
 	if (strcmp(s = basename(editor), "more") == 0 || strcmp(s, "page") == 0) {
 		
 		/* get it to pause after displaying a file smaller than the screen
 		   length */
 		(void) execute(editor, editor, plusnum, file, "/dev/null", NULL);
+	}
+	else if (lineflagafterfile) {
+		(void) execute(editor, editor, file, plusnum, NULL);
 	}
 	else {
 		(void) execute(editor, editor, plusnum, file, NULL);
