@@ -1,3 +1,5 @@
+(2001/02/09 - duell & hull) Support for CSCOPE_EDITOR, CSCOPE_LINEFLAG and
+                            CSCOPE_LINEFLAGS_AFTER_FILE
 (2001/02/09 - petrs) Updated version number to 15.2b (for beta)
 (2001/02/09 - chuck & wilfredo) Darwin support
 (2001/01/24 - petrs) Replaced new style C comments, i.e. //
